--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/frontend.css": "/css/frontend.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.js.map": "/js/app.js.map",
+    "/css/frontend.css.map": "/css/frontend.css.map",
+    "/css/app.css.map": "/css/app.css.map"
 }
