--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "sass-loader": "^8.0.2",
         "tailwindcss": "^1.8.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "sweetalert": "^2.1.2"
     }
 }
